ISSUE #210 - renamed register to signUp and registerForm to signupForm, added "pay" parameter to signUp

--- a/frontend/login/jade/login.jade
+++ b/frontend/login/jade/login.jade
@@ -17,7 +17,7 @@
 						md-button.md-accent.md-raised(ng-click="vm.login()") Log In
 					h4.loginError {{vm.errorMessage}}
 					a.loginLinks(href="", ng-click="vm.showPage('passwordForgot')") Forgot password?
-					a.loginLinks(href="", ng-click="vm.showPage('pricing')") Sign up
+					a.loginLinks(href="", ng-click="vm.showPage('pricing')") Pricing
 					h2.md-subhead#loginVersion Version: {{vm.version}}
 
 				//div(ng-if="vm.useRegister", layout="row")
