--- a/frontend/pricing/jade/pricing.jade
+++ b/frontend/pricing/jade/pricing.jade
@@ -18,7 +18,7 @@
 					h3 Collaborate
 			md-divider(layout-fill)
 			div(layout="row", layout-align="center center", layout-fill)
-				md-button.md-raised.md-accent(ng-click="vm.showPage('register')") Sign Up
+				md-button.md-raised.md-accent(ng-click="vm.showPage('signUp')") Sign Up
 
 	// Advanced
 	md-content.md-whiteframe-8dp(aria-label="Advanced", flex="15")
@@ -47,7 +47,7 @@
 					h3 Collaborate
 			md-divider(layout-fill)
 			div(layout="row", layout-align="center center", layout-fill)
-				md-button.md-raised.md-accent(ng-click="vm.showPage('register')") Sign Up
+				md-button.md-raised.md-accent(ng-click="vm.showPage('signUp', true)") Sign Up
 
 	// Enterprise
 	md-content.md-whiteframe-1dp(aria-label="Enterprise", flex="15")
