--- a/frontend/signup/jade/signup.jade
+++ b/frontend/signup/jade/signup.jade
@@ -4,4 +4,4 @@
 			.md-toolbar-tools
 				h2 Sign Up
 		.userContent(layout="column", layout-align="start center", layout-fill)
-			register-form(button-label="Sign Up")
+			sign-up-form(button-label="Sign Up")
