--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -42,5 +42,5 @@ input(type="file", id="fileUploader")
 				p {{vm.info}}
 				md-progress-circular(md-diameter="20px", ng-if="vm.showProgress", md-mode="indeterminate")
 
-		md-button.md-accent.md-fab.md-mini#newProjectButton(aria-label="New Project", ng-click="vm.newProject($event)")
+		md-button.md-accent.md-fab.md-mini#newDatabaseButton(aria-label="New Database", ng-click="vm.newDatabase($event)")
 			md-icon.angular-material-icons add
