--- a/frontend/registerRequest/jade/registerRequest.jade
+++ b/frontend/registerRequest/jade/registerRequest.jade
@@ -1,9 +1,9 @@
 .homeUserContent(layout="row", layout-align="center", flex)
-	md-content.md-whiteframe-1dp(aria-label="Registered", flex="30")
+	md-content.md-whiteframe-1dp(aria-label="Sign up", flex="30")
 		md-toolbar
 			.md-toolbar-tools
-				h2 Registration request
+				h2 Sign up request
 		.userContent(layout="column")
-			h3 Thank you for registering with 3D Repo.
-			h3 Check your inbox for an email confirming your account. You must click the link in the email to complete the registration process.
+			h3 Thank you for signing up with 3D Repo.
+			h3 Check your inbox for an email confirming your account. You must click the link in the email to complete the sign up process.
 			h3 If you do not receive an email within a few minutes, check your Spam folder to ensure it was not incorrectly moved.
