--- a/frontend/signUp/jade/signUpForm.jade
+++ b/frontend/signUp/jade/signUpForm.jade
@@ -14,7 +14,7 @@ form#signUpForm
 	div(layout="row", layout-align="start center")
 		md-button.md-accent.md-raised(ng-click="vm.register()", ng-disabled="vm.registering", flex="none") {{vm.buttonLabel}}
 		#registerWait(ng-if="vm.registering", layout="row", layout-align="start center")
-			p Registering...
+			p Signing up...
 			md-progress-circular(md-mode="indeterminate")
 	h4.registerError {{vm.registerErrorMessage}}
 	a.registerLinks(href="", ng-click="vm.showPage('pricing')") Pricing
