--- a/frontend/registerVerify/jade/registerVerify.jade
+++ b/frontend/registerVerify/jade/registerVerify.jade
@@ -5,7 +5,20 @@
 				h2 Registered for 3D Repo
 		.userContent(layout="column")
 			h3(ng-if="!vm.verified") {{vm.verifyErrorMessage}}
-			div(ng-if="vm.verified", layout="column", layout-align="start")
+			div(ng-if="true", layout="column", layout-align="start")
 				h3 {{vm.verifySuccessMessage}}
 				div(layout="row")
 					md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
+				div(ng-if="true")
+					h3 Or continue with payment
+					form(action="https://www.sandbox.paypal.com/cgi-bin/webscr", method="post")
+						input(type="hidden", name="cmd", value="_s-xclick")
+						input(type="hidden", name="hosted_button_id", value="ETZVXP3F4Q4GE")
+						input(type="hidden", name="custom", value="{{vm.newDatabaseToken}}")
+						input(type="hidden", name="return", value="{{vm.paypalReturnUrl}}")
+						div(layout="row", layout-align="start center")
+							md-button.md-accent.md-raised(type="submit", ng-click="vm.setupPayment()", ng-disabled="vm.showPaymentWait") Pay
+							div(ng-if="vm.showPaymentWait", layout="row", layout-align="start center")
+								p Please wait...
+								md-progress-circular(md-mode="indeterminate", md-diameter="20")
+
