--- a/frontend/bottomButtons/css/bottomButtons.css
+++ b/frontend/bottomButtons/css/bottomButtons.css
@@ -4,14 +4,14 @@ bottom-buttons {
   bottom: 80px;
   left: 0;
   right: 0;
-  width: 360px;
+  width: 260px;
   margin: auto;
   text-align: center;
 }
 
 bottom-buttons #leftButtons {
   position: absolute;
-  left: -15px;
+  left: 20px;
   top: 8px;
 }
 bottom-buttons #leftButtons span {
@@ -20,7 +20,7 @@ bottom-buttons #leftButtons span {
 
 bottom-buttons #rightButtons {
   position: absolute;
-  right: 35px;
+  right: 10px;
   top: 8px;
 }
 bottom-buttons #rightButtons span {
@@ -40,7 +40,7 @@ bottom-buttons .actionButton md-icon {
 
 bottom-buttons .viewingOptionButtons {
   position: absolute;
-  left: 40px;
+  right: 15px;
   top: -120px;
 }
 
@@ -54,14 +54,14 @@ bottom-buttons label:hover {
   cursor: pointer;
 }
 
-.bottomButtomIconCardboard {
+.bottomButtonIconCardboard {
   font-size: 20px !important;
   margin-left: -4px;
 }
-.bottomButtomIconWalk {
+.bottomButtonIconWalk {
   margin-left: 0;
 }
-.bottomButtomIconHelicopter {
+.bottomButtonIconHelicopter {
   margin-left: -5px;
   font-size: 22px !important;
 }
