ISSUE #210 - Scribble pen same as indicator, improving payment

--- a/frontend/home/css/home.css
+++ b/frontend/home/css/home.css
@@ -55,6 +55,10 @@ home .homeUserContent .userContent h3 {
     font-weight: normal;
 }
 
+home .homeUserContent .userContent md-progress-circular {
+    margin-left: 10px;
+}
+
 home .cardInfo {
     text-align: center;
     padding: 15px;
