--- a/frontend/pricing/css/pricing.css
+++ b/frontend/pricing/css/pricing.css
@@ -9,6 +9,7 @@ pricing md-toolbar h2 {
 
 pricing md-divider {
     margin-bottom: 10px !important;
+    width: 100%;
 }
 
 pricing #pricingMiddlePanelTitle {
@@ -27,6 +28,7 @@ pricing .pricingIcon#pricingAdvancedIcon {
 
 pricing .pricingPrice {
     height: 100px;
+    display: block;
 }
 pricing .pricingPriceTitle {
     margin: 10px 0;
@@ -50,4 +52,10 @@ pricing .pricingInfo .pricingInfoLine h3 {
 pricing .pricingInfo .pricingInfoLine md-icon {
     margin: 0 5px 0 0;
     color: #C8E6C9;
+}
+
+pricing .pricingContent {
+    max-height: 600px;
+    height: calc(100vh - 180px);
+    overflow: auto;
 }
