--- a/frontend/pricing/jade/pricing.jade
+++ b/frontend/pricing/jade/pricing.jade
@@ -4,11 +4,11 @@
 		md-toolbar
 			.md-toolbar-tools
 				h2 Basic
-		.userContent(layout="column", layout-align="start center", layout-fill)
+		.userContent.pricingContent(layout="column", layout-align="start center",)
 			md-icon.angular-material-icons.pricingIcon account_circle
-			.pricingPrice(flex)
+			.pricingPrice
 				h3.md-display-2.pricingPriceTitle Free
-			md-divider(layout-fill)
+			md-divider
 			.pricingInfo(layout="column", layout-align="start")
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
@@ -16,8 +16,8 @@
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
 					h3 Collaborate
-			md-divider(layout-fill)
-			div(layout="row", layout-align="center center", layout-fill)
+			md-divider
+			div(layout="row", layout-align="center center")
 				md-button.md-raised.md-accent(ng-click="vm.showPage('signUp')") Sign Up
 
 	// Advanced
@@ -25,13 +25,13 @@
 		md-toolbar
 			.md-toolbar-tools
 				h2#pricingMiddlePanelTitle Advanced
-		.userContent(layout="column", layout-align="start center")
+		.userContent.pricingContent(layout="column", layout-align="start center")
 			md-icon.angular-material-icons.pricingIcon#pricingAdvancedIcon grade
 			.pricingPrice(layout="column", layout-align="start center")
 				div(layout="row", layout-align="center center")
 					h3.md-display-2.pricingPriceTitle £100
 				h3.md-subhead.pricingPriceSubtitle Per Month
-			md-divider(layout-fill)
+			md-divider
 			.pricingInfo(layout="column", layout-align="start")
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
@@ -45,8 +45,8 @@
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
 					h3 Collaborate
-			md-divider(layout-fill)
-			div(layout="row", layout-align="center center", layout-fill)
+			md-divider
+			div(layout="row", layout-align="center center")
 				md-button.md-raised.md-accent(ng-click="vm.showPage('signUp', true)") Sign Up
 
 	// Enterprise
@@ -54,11 +54,11 @@
 		md-toolbar
 			.md-toolbar-tools
 				h2 Enterprise
-		.userContent(layout="column", layout-align="start center")
+		.userContent.pricingContent(layout="column", layout-align="start center")
 			md-icon.angular-material-icons.pricingIcon language
 			.pricingPrice
 				h3.md-display-2.pricingPriceTitle Custom
-			md-divider(layout-fill)
+			md-divider
 			.pricingInfo(layout="column", layout-align="start")
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
@@ -75,6 +75,6 @@
 				.pricingInfoLine(layout="column", layout-align="start center")
 					md-icon.angular-material-icons stars
 					h3 Custom Development
-			md-divider(layout-fill)
-			div(layout="row", layout-align="center center", layout-fill)
+			md-divider
+			div(layout="row", layout-align="center center")
 				md-button.md-raised.md-accent(ng-click="vm.showPage('contact')") Get In Touch
