--- a/frontend/pricing/css/pricing.css
+++ b/frontend/pricing/css/pricing.css
@@ -41,6 +41,9 @@ pricing .pricingPriceSubtitle {
 
 pricing .pricingInfo {
     height: 350px;
+    display: block;
+    overflow: auto;
+    width: 100%;
 }
 pricing .pricingInfo .pricingInfoLine {
     margin: 10px 0;
