--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -1,4 +1,7 @@
 img#homeBackground(src="/public/images/viewer_background.jpg")
+#legalLinks(layout="row")
+	md-button(ng-repeat="display in vm.legalDisplays", ng-click="vm.display($event, display)") {{display.title}}
+
 #homeLogo
 	img(src="/public/images/3drepo-logo-white.png")
 
