--- a/frontend/login/jade/login.jade
+++ b/frontend/login/jade/login.jade
@@ -17,36 +17,5 @@
 						md-button.md-accent.md-raised(ng-click="vm.login()") Log In
 					h4.loginError {{vm.errorMessage}}
 					a.loginLinks(href="", ng-click="vm.showPage('passwordForgot')") Forgot password?
-					a.loginLinks(href="", ng-click="vm.showPage('pricing')") Pricing
+					a.loginLinks(href="", ng-click="vm.showPage('pricing')") Sign up
 					h2.md-subhead#loginVersion Version: {{vm.version}}
-
-				//div(ng-if="vm.useRegister", layout="row")
-					div(flex="10", layout="column", layout-align="center center")
-						#loginDivider(flex)
-
-					// Register
-					//#loginRegister(layout="column", flex)
-						h3.loginTitle Register
-						md-input-container.md-block(md-no-float)
-							input(type='text', ng-model='vm.newUser.username', placeholder='Username', ng-required, ng-keypress="vm.register($event)")
-						md-input-container(md-no-float)
-							input(type='email', ng-model='vm.newUser.email', placeholder='Email', ng-required, ng-keypress="vm.register($event)")
-						md-input-container(md-no-float)
-							input(type='password', ng-model='vm.newUser.password', placeholder='Password', ng-required ng-keypress="vm.register($event)")
-						#tc(layout="row", layout-align="start center", flex)
-							md-checkbox.md-accent(ng-model="vm.newUser.tcAgreed" aria-label="Terms and conditions Checkbox")
-							div(layout="row", layout-align="start center")
-								p I agree to the
-								a(href="", ng-click="vm.showTC()") Terms and Conditions
-						#loginCaptcha(vc-recaptcha, key="vm.captchaKey", ng-model="vm.reCaptchaResponse", ng-if="vm.useReCapthca")
-						div(layout="row", layout-align="start center")
-							md-button.md-accent.md-raised(ng-click="vm.register()", ng-disabled="vm.registering", flex="none") Register For Free
-							#registerWait(ng-if="vm.registering", layout="row", layout-align="start center")
-								p Registering...
-								md-progress-circular(md-mode="indeterminate")
-							a#loginPricing(href="", ng-if="!vm.registering", ng-click="vm.showPage('pricing')") Pricing
-						h4.loginError {{vm.registerErrorMessage}}
-
-					#loginRegister(layout="column", flex)
-						h3.loginTitle Register
-						register-form(button-label="register For Free")
