ISSUE #210 - Logging out logs out any other tabs

--- a/frontend/home/css/home.css
+++ b/frontend/home/css/home.css
@@ -101,3 +101,8 @@ home #legalLinks .md-button {
     margin-right: 10px;
 }
 
+/** Dialog ************************************************************************************************************/
+md-dialog md-toolbar {
+    height: 40px;
+    min-height: 40px;
+}
