ISSUE #210 - T&C link in signup form displays T&C

--- a/frontend/signup/jade/signup.jade
+++ b/frontend/signup/jade/signup.jade
@@ -3,5 +3,5 @@
 		md-toolbar
 			.md-toolbar-tools
 				h2 Sign Up
-		.userContent(layout="column", layout-align="start center", layout-fill)
+		.userContent(layout="column", layout-align="start center")
 			sign-up-form(button-label="Sign Up")
