ISSUE #210 - Issues display correctly when editing is cancelled, pricing styling tweaked

--- a/frontend/contact/jade/contact.jade
+++ b/frontend/contact/jade/contact.jade
@@ -1,5 +1,5 @@
 .homeUserContent(layout="row", layout-align="center")
-	md-content.md-whiteframe-1dp(aria-label="Register", flex="20")
+	md-content.md-whiteframe-1dp(aria-label="Contact Us", flex="20")
 		md-toolbar
 			.md-toolbar-tools
 				h2 Contact Us
