--- a/frontend/pricing/css/pricing.css
+++ b/frontend/pricing/css/pricing.css
@@ -58,7 +58,7 @@ pricing .pricingInfo .pricingInfoLine md-icon {
 }
 
 pricing .pricingContent {
-    max-height: 600px;
+    max-height: 600px !important;
     height: calc(100vh - 180px);
     overflow: auto;
 }
