--- a/frontend/pricing/jade/pricing.jade
+++ b/frontend/pricing/jade/pricing.jade
@@ -18,7 +18,7 @@
 				md-button.md-raised.md-accent(ng-click="vm.showPage('signUp')") Sign Up
 
 	// Advanced
-	md-content.md-whiteframe-8dp(aria-label="Advanced", flex="15")
+	//md-content.md-whiteframe-8dp(aria-label="Advanced", flex="15")
 		md-toolbar
 			.md-toolbar-tools
 				h2#pricingMiddlePanelTitle Advanced
