--- a/frontend/account/jade/accountProfile.jade
+++ b/frontend/account/jade/accountProfile.jade
@@ -7,39 +7,43 @@
 
 		md-list.accountProfileList
 			div(layout="column", flex)
-				md-list-item(ng-click="vm.showInfo=!vm.showInfo")
+				md-list-item(ng-click="vm.toggleInfo()")
+					md-button.md-icon-button(aria-label="Folder")
+						md-icon.angular-material-icons person_outline
 					p Info
-				.accountProfileContent(ng-show="vm.showInfo", layout="column", flex="50")
-					md-input-container.md-block
-						label Username
-						input(ng-model="vm.username" ng-disabled="true")
-					md-input-container.md-block
-						label First name
-						input(ng-model="vm.firstName")
-					md-input-container.md-block
-						label Last name
-						input(ng-model="vm.lastName")
-					md-input-container.md-block
-						label Email
-						input(ng-model="vm.email", type="email")
-					.updateContainer(layout="row", layout-align="start center")
-						md-button.md-accent(ng-click="vm.updateInfo()") Update
-						p {{vm.infoSaveInfo}}
+				div(flex layout="row")
+					.accountProfileContent(ng-show="vm.showInfo", layout="column", flex="40")
+						md-input-container.md-block
+							label Username
+							input(ng-model="vm.username" ng-disabled="true")
+						md-input-container
+							label First name
+							input(ng-model="vm.firstName")
+						md-input-container.md-block
+							label Last name
+							input(ng-model="vm.lastName")
+						md-input-container.md-block
+							label Email
+							input(ng-model="vm.email", type="email")
+						.updateContainer(layout="row", layout-align="start center")
+							md-button.md-accent(ng-click="vm.updateInfo()") Update
+							p {{vm.infoSaveInfo}}
 
 			md-divider
 
 			div(layout="column")
-				md-list-item(ng-click="vm.showChangePassword=!vm.showChangePassword")
+				md-list-item(ng-click="vm.toggleChangePassword()")
+					md-button.md-icon-button(aria-label="Folder")
+						md-icon.angular-material-icons swap_vert
 					p Change Password
-				.accountProfileContent(ng-show="vm.showChangePassword", flex="50")
-					div
+				div(flex layout="row")
+					.accountProfileContent(ng-show="vm.showChangePassword", layout="column", flex="40")
 						md-input-container.md-block
 							label Old password
 							input(ng-model="vm.oldPassword", type="password")
-					div
 						md-input-container.md-block
 							label New password
 							input(ng-model="vm.newPassword", type="password")
-					.updateContainer(layout="row", layout-align="start center")
-						md-button.md-accent(ng-click="vm.updatePassword()") Update
-						p {{vm.passwordSaveInfo}}
+						.updateContainer(layout="row", layout-align="start center")
+							md-button.md-accent(ng-click="vm.updatePassword()") Update
+							p {{vm.passwordSaveInfo}}
