ISSUE #210 - Inputs have labels instead of placeholders

--- a/frontend/contact/css/contact.css
+++ b/frontend/contact/css/contact.css
@@ -5,3 +5,7 @@ contact md-input-container textarea {
 contact .md-button {
     margin-top: 10px;
 }
+
+contact md-input-container {
+    margin: 0;
+}
