--- a/frontend/passwordChange/jade/passwordChange.jade
+++ b/frontend/passwordChange/jade/passwordChange.jade
@@ -3,13 +3,14 @@
 		md-toolbar
 			.md-toolbar-tools
 				h2 Change Password
-		.userContent(layout="column", layout-align="start center")
+		.userContent(layout="column", layout-align="start")
 			div(layout="column", ng-if="!vm.passwordChanged", flex)
-				md-input-container.md-block(md-no-float)
-					input(type='password', ng-model='vm.newPassword', placeholder='New Password', ng-required, ng-keypress="vm.passwordChange($event)")
-				div(layout="column", layout-align="start center")
+				md-input-container.md-block
+					label New Password
+					input(type='password', ng-model='vm.newPassword', ng-required, ng-keypress="vm.passwordChange($event)")
+				div(layout="column", layout-align="start start")
 					md-button.md-raised.md-accent(ng-click="vm.passwordChange()") Set Password
-					div(layout="row", layout-align="start center")
+					div(layout="row", layout-align="start")
 						h3(style="color:{{vm.messageColor}}") {{vm.message}}
 						md-progress-circular(md-diameter="20px", ng-if="vm.showProgress", md-mode="indeterminate")
 
