--- a/frontend/passwordForgot/jade/passwordForgot.jade
+++ b/frontend/passwordForgot/jade/passwordForgot.jade
@@ -4,12 +4,14 @@
 			.md-toolbar-tools
 				h2 Forgot password
 		.userContent(layout="column")
-			h3 Please enter your username and email
-			md-input-container.md-block(md-no-float, flex)
-				input(type='text', ng-model='vm.username', placeholder='Username', ng-required)
-			md-input-container.md-block(md-no-float)
-				input(type='email', ng-model='vm.email', placeholder='Email', ng-required)
-			div(layout="column", layout-align="center center")
+			p Please enter your username and email
+			md-input-container.md-block
+				label Username
+				input(type='text', ng-model='vm.username', ng-required)
+			md-input-container.md-block
+				label Email
+				input(type='email', ng-model='vm.email', ng-required)
+			div(layout="column", layout-align="start start")
 				md-button.md-raised.md-accent(ng-click="vm.requestPasswordChange()") Request Password Change
 				div(layout="row", layout-align="start center")
 					h3(style="color:{{vm.messageColor}}") {{vm.message}}
