ISSUE #210 - Added blacklist user names, Issues list min height same as add issue, setup deleting of project

--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -251,6 +251,26 @@ account-menu md-icon {
   margin: 0;
 }
 
+.newProjectDialog #projectDialogError {
+  margin: 0;
+  color: #F44336;
+}
+
+/** Delete Project Dialog *********************************************************************************************/
+.deleteProjectDialog {
+  min-width: 350px;
+  min-height: 230px;
+  overflow: hidden;
+}
+
+.deleteProjectDialog p {
+  color: rgba(0 ,0, 0, 0.6);
+}
+.deleteProjectDialog #deleteProjectName {
+  color: rgba(0 ,0, 0, 0.9);
+  margin-left: 5px;
+}
+
 /** New Database Dialog ***********************************************************************************************/
 .newDatabaseDialog {
   min-width: 350px;
