--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -54,6 +54,8 @@ input#newProjectFileUploader(type="file")
 								ng-click="vm.uploadModel(project)"
 								ng-if="project.canUpload")
 								md-icon.angular-material-icons cloud_upload
+							md-button.md-icon-button(aria-label="Delete", ng-click="vm.setupDeleteProject(project)")
+								md-icon.angular-material-icons delete
 
 				md-divider
 
