ISSUE #210 - Fixed "false" username bug, user going to someone else's project takes them to their projects's list,

--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -12,4 +12,6 @@ div(ng-if="!vm.state.changing")
 
 	div(ng-if="vm.state.loggedIn")
 		div(ng-if="vm.getLoggedInUrl()" ng-include="vm.getLoggedInUrl()")
-		#homeLoggedIn(ng-if="!vm.getLoggedInUrl()")
+		div(ng-if="!vm.getLoggedInUrl()")
+			#homeLoggedIn
+			account-dir(account='vm.state.account', state='vm.state', ng-if="vm.goToAccount")
